# cga-robotics-ros

./: CMakeLists.txt  package.xml
action/: Gripper.action  Trajectory.action
config/: delta.perspective  delta_controllers.yaml  delta_example.yaml  delta_gazebo_control_gains.yaml  delta_vel.perspective  industrial.perspective  industrial_controllers.yaml  industrial_gazebo_control_gains.yaml  serial_controllers.yaml  serial_gazebo_control_gains.yaml  view_robot.rviz  view_robot_vel.rviz
include/: joint_group_publisher.h  joint_publisher.h  joystick_listener.h
include/cbot/: conversions.h
include/nodes/: controller.h  state_publisher.h
launch/: control_delta.launch  delta.launch  delta_controller.launch  delta_hw.launch  delta_state_publisher.launch  delta_vel.launch  gzserver.launch  industrial.launch  serial.launch  serial_controller.launch  serial_hw.launch  serial_model.launch  serial_state_publisher.launch  spawn_block.launch  spawn_delta.launch  view_model.launch
model/: block.sdf
model/delta/: gazebo.sdf.xacro  materials.urdf.xacro  parameters.xacro  ros.urdf.xacro
model/delta/gazebo_joints/: end_effector.sdf.xacro  lower.sdf.xacro  upper.sdf.xacro
model/delta/gazebo_links/: base.sdf.xacro  end_effector.sdf.xacro  lower.sdf.xacro  upper.sdf.xacro
model/delta/ros_joints/: end_effector.urdf.xacro  lower.urdf.xacro  upper.urdf.xacro
model/delta/ros_links/: base.urdf.xacro  end_effector.urdf.xacro  lower.urdf.xacro  upper.urdf.xacro
model/industrial/: parameters.xacro  ros.urdf.xacro
model/macros/: inertia.xacro
model/serial/: materials.urdf.xacro  parameters.xacro  parameters2.xacro  ros.urdf.xacro  ros2.urdf.xacro
src/: commander.cpp  joint_group_publisher.cpp  joint_publisher.cpp  joint_velocity_integrator.cpp  twist_marker.cpp
src/delta/: controller.cpp  fk.cpp  fk_vel.cpp  hardware_interface.cpp  ik.cpp  ik_vel.cpp  state_publisher.cpp
src/fk/: main.cpp
src/nodes/: controller.cpp  state_publisher.cpp
src/serial/: controller.cpp  hardware_interface.cpp  protocol.h  state_publisher.cpp
srv/: PoseCommand.srv
worlds/: empty.world
