<?xml version="1.0"?>
<package format="2">
  <name>cga_robotics_ros</name>
  <version>0.0.0</version>
  <description>The cga_robotics_ros package</description>
  <maintainer email="zachalambert@gmail.com">Zach Lambert</maintainer>
  <license>TODO</license>

  <depend>roscpp</depend>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
