<?xml version="1.0"?>
<package format="2">
  <name>cga_robotics_ros</name>
  <version>0.0.0</version>
  <description>The cga_robotics_ros package</description>
  <maintainer email="zachalambert@gmail.com">Zach Lambert</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <export>
  </export>
</package>
